# dkrutil

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/dkrutil/cli/: rich.py  secret.py  volume.py
