[project]
name = "dkrutil"
version = "1.0.3"
description = "A command-line tool for managing Docker containers, volumes, images, and secrets"
authors = [{ name = "emerick-biron" }]
maintainers = [{ name = "emerick-biron" }]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["docker", "cli", "container", "volume", "backup", "secrets", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "rich-click>=1.8.8",
    "docker>=7.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/emerick-biron/dkrutil"
Repository = "https://github.com/emerick-biron/dkrutil"
Issues = "https://github.com/emerick-biron/dkrutil/issues"
Changelog = "https://github.com/emerick-biron/dkrutil/releases"

[project.scripts]
dkrutil = "dkrutil.cli.dkrutil:dkrutil"

[tool.hatch.build.targets.sdist]
include = ["src/dkrutil"]

[tool.hatch.build.targets.wheel]
include = ["src/dkrutil"]

[tool.hatch.build.targets.wheel.sources]
"src/dkrutil" = "dkrutil"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
